--- a/proyectos.html
+++ b/proyectos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proyectos</title>
+    <title>Proyectos | Diego Ordóñez</title>
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
@@ -11,11 +11,21 @@
     <!-- Animate.css -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+
     <!-- Estilos CSS -->
     <link rel="stylesheet" href="css/styles.css">
+
+    <!-- Icono Favicon -->
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <a href="index.html" class="btn-hola">Volver al inicio</a>
+    <div class="top-bar">
+        <i id="theme-icon" class="fa-solid fa-circle-half-stroke"></i>
+        <a href="index.html" class="btn-hola">Volver al inicio</a>
+    </div>
 
     <section id="proyectos">
         <h1>Mis Proyectos</h1>
@@ -37,5 +47,6 @@
             </div>
         </div>
     </section>
+    <script src="js/tema.js"></script>
 </body>
 </html>
