Añadido objeto curriculum

--- a/sobre_mi.html
+++ b/sobre_mi.html
@@ -41,9 +41,7 @@
             <p style="font-size: 1.2rem; max-width: 600px; margin: 20px auto;" id="p-oscuro">
                 Mi objetivo es seguir creciendo profesionalmente, explorando nuevos desafíos en el mundo del desarrollo de software y dejando mi huella en cada proyecto que realizo.
             </p>
-            <a href="images/curriculum.pdf" class="resume-link">
-                ↓ Currículum
-            </a>
+            <a href="curriculum3D.html" class="resume-link">↓ Currículum</a>
     </section>
     <script src="js/tema.js"></script>
 </body>
